booking catalog extras

--- a/views/booking_catalogs_management.erb
+++ b/views/booking_catalogs_management.erb
@@ -82,7 +82,12 @@
               <div class="formrow">
                 <label for="product_family[code]" class="fieldtitle"><%=t.catalog_management.form.product_family.label%></label>
                 <select name="product_family[code]" id="product_family[code]" class="fieldcontrol"/>
-              </div>              
+              </div>  
+              <div class="formrow">
+                <label class="fieldtitle"><%=t.catalog_management.form.extras.label%></label>
+                <div id="booking_extras">
+                </div>
+              </div>            
           </div>
                         
         </div>
