--- a/views/booking_catalogs_management.js.erb
+++ b/views/booking_catalogs_management.js.erb
@@ -1,7 +1,7 @@
 
 require(["jquery", "YSDEntityManagement", "YSDEntityManagementComplementHooks",
-         "YSDRemoteDataSource", "YSDSelectSelector", "jquery.ui", "YSDjson2"],
-         function($, EntityManagement, EntityManagementComplementHooks, RemoteDataSource, SelectSelector) {
+         "YSDRemoteDataSource", "YSDSelectSelector", "YSDListSelector", "jquery.ui", "YSDjson2"],
+         function($, EntityManagement, EntityManagementComplementHooks, RemoteDataSource, SelectSelector, ListSelector) {
     
   var bookingCatalogHook = {
      
@@ -70,10 +70,23 @@ require(["jquery", "YSDEntityManagement", "YSDEntityManagementComplementHooks",
       var productFamilyDataSource = new RemoteDataSource('/api/booking-product-families',{'id':'code','description':'code'});
       var productFamilyValue = (this.entity && this.entity.product_family_code)?this.entity.product_family_code:null;
       var productFamilySelector = new SelectSelector('product_family[code]', productFamilyDataSource, productFamilyValue); 
+      
+      var extrasDataSource = new RemoteDataSource('/api/booking-extras', {'id':'code', 'description': 'name'});
+      var extrasValue = (this.entity && this.entity.booking_extras)? this.entity.booking_extras.map(function(item){return item.code;}):[];
+      var extrasSelector = new ListSelector('booking_extras',
+        'booking_extras[]', extrasDataSource, extrasValue);
+      
+
     },
       
     adaptFormData : function(data) {
             
+      var adaptedExtras = [];
+      for (idx in data['booking_extras']) {
+        adaptedExtras.push({'code': data['booking_extras'][idx]});
+      }
+      data['booking_extras'] = adaptedExtras;
+
       if (data.product_family.code == '') {
         data.product_family = null;
       }
