--- a/views/_booking_menu.erb
+++ b/views/_booking_menu.erb
@@ -22,7 +22,8 @@
       <p class="smaller_text left-margin top-space bottom-space"><a href="/admin/booking/booking-extras"><%=t.booking_console.extras%></a></p>  
       <p class="smaller_text left-margin top-space bottom-space"><a href="/admin/rates/season-defs"><%=t.rates_console.seasons%></a></p>
       <p class="smaller_text left-margin top-space bottom-space"><a href="/admin/rates/factor-defs"><%=t.rates_console.factors%></a></p>
-      <p class="smaller_text left-margin top-space bottom-space"><a href="/admin/booking/booking-place-defs"><%=t.booking_console.places%></a></p>              
+      <p class="smaller_text left-margin top-space bottom-space"><a href="/admin/booking/booking-place-defs"><%=t.booking_console.places%></a></p>
+      <p class="smaller_text left-margin top-space bottom-space"><a href="/admin/rates/adjust-prices"><%=t.booking_console.adjust_prices%></a></p>             
   </div>
   <div class="top-space bottom-space">
       <p class="more_contrast_text"><a href="/admin/booking/catalog"><%=t.booking_console.catalogs%></a></p> 
