massive price update

--- a/views/_booking_menu.erb
+++ b/views/_booking_menu.erb
@@ -24,6 +24,7 @@
       <p class="smaller_text left-margin top-space bottom-space"><a href="/admin/rates/factor-defs"><%=t.rates_console.factors%></a></p>
       <p class="smaller_text left-margin top-space bottom-space"><a href="/admin/booking/booking-place-defs"><%=t.booking_console.places%></a></p>
       <p class="smaller_text left-margin top-space bottom-space"><a href="/admin/rates/price-defs"><%=t.booking_console.rates%></a></p>
+      <p class="smaller_text left-margin top-space bottom-space"><a href="/admin/rates/adjust-prices"><%=t.booking_console.adjust_prices%></a></p>  
       <p class="smaller_text left-margin top-space bottom-space"><a href="/admin/calendar/calendars"><%=t.booking_console.calendars%></a></p>
       <p class="smaller_text left-margin top-space bottom-space"><a href="/admin/calendar/timetables"><%=t.booking_console.timetables%></a></p>             
   </div>
