--- a/views/bookings_management.erb
+++ b/views/bookings_management.erb
@@ -29,6 +29,19 @@
      <tbody id="elements_tbody" class="table-tbody">             
      </tbody>
   </table>
+  <div class="guiblock smaller_text all-space left-margin right-margin">
+    <p><%=t.booking_management.footer.title.upcase%>:</p>
+    <div>
+    <span class="more_contrast_text">c1:</span><span class="less_contrast_text"><%=t.booking_management.footer.c1_notification%></span>&nbsp;
+    <span class="more_contrast_text">c2:</span><span class="less_contrast_text"><%=t.booking_management.footer.c2_notification%></span>&nbsp;
+    <span class="more_contrast_text">c3:</span><span class="less_contrast_text"><%=t.booking_management.footer.c3_notification%></span>&nbsp;
+    <span class="more_contrast_text">c4:</span><span class="less_contrast_text"><%=t.booking_management.footer.c4_notification%></span>&nbsp;
+    </div>
+    <div>
+    <span class="more_contrast_text">m:</span><span class="less_contrast_text"><%=t.booking_management.footer.m1_notification%></span>&nbsp;
+    <span class="more_contrast_text">m2:</span><span class="less_contrast_text"><%=t.booking_management.footer.m2_notification%></span>&nbsp;    
+    </div>
+  </div>
 </script>
 
 <!-- Renders one element in the elements list view -->
@@ -54,7 +67,10 @@
       <td class="table-cell centered_text">
          <%% if (entity.customer_req_notification_sent) { %><span class="element-status pending-status smaller_text">c1</span> <%% } %>
          <%% if (entity.customer_notification_sent) { %><span class="element-status confirmed-status smaller_text">c2</span> <%%}%>
+         <%% if (entity.customer_req_notification_p_sent) { %><span class="element-status confirmed-status smaller_text">c3</span> <%%}%>
+         <%% if (entity.customer_payment_enabled_sent) { %><span class="element-status confirmed-status smaller_text">c4</span> <%%}%>                  
          <%% if (entity.manager_notification_sent) { %><span class="element-status confirmed-status smaller_text">m</span><%%}%>
+         <%% if (entity.manager_notification_p_n_sent) { %><span class="element-status confirmed-status smaller_text">m2</span><%%}%>
       </td> 
     </tr>
 </script>
@@ -291,14 +307,84 @@
      </div>
  
      <div class="container_12">
-         <div class="bottom-margin" style="border:1px solid #EEE">
-             <div class="left-margin more_contrast_text top-margin bottom-margin" style="text-decoration:underline;"><%= t.booking_management.form.comments %></div>
+       <div class="grid_6">
+         <div class="bottom-margin overflow" style="border:1px solid #EEE">
+             <div class="left-margin more_contrast_text top-margin bottom-margin" style="text-decoration:underline;"><%= t.booking_management.form.comments %>
+             </div>
+             <div class="element_template bottom-margin">
+               <span class="all-space"><%%= entity.comments %></span>
+             </div>
+         </div>
+       </div>
+       <div class="grid_6">
+         <div class="left-margin bottom-margin overflow" style="border:1px solid #EEE">
+           <div class="left-margin right-margin">
+             <div class="more_contrast_text top-margin bottom-margin" style="text-decoration:underline;"><%= t.booking_management.form.notifications.title %>
+             </div>
              <div class="grid_6">
-               <div class="element_template bottom-margin">
-                 <span class="all-space"><%%= entity.comments %></span>
+               <div style="height: 2.5em" class="all-space bottom-separator more_contrast_text"><%=t.booking_management.form.notifications.c1_notification%></div>
+               <div style="height: 2.5em"  class="all-space bottom-separator more_contrast_text"><%=t.booking_management.form.notifications.c3_notification%></div>
+               <div style="height: 2.5em"  class="all-space bottom-separator more_contrast_text"><%=t.booking_management.form.notifications.c2_notification%></div>
+               <div style="height: 2.5em"  class="all-space more_contrast_text"><%=t.booking_management.form.notifications.c4_notification%></div>                            
+             </div>
+             <div class="grid_3">
+               <div style="height: 2.5em" class="all-space bottom-separator">
+                 <%%=entity.customer_req_notification_sent ? '<%= t.booking_management.form.notifications.sent%>' : '<%=t.booking_management.form.notifications.not_sent%>'%>
                </div>
-             </div>          
-           </div>
+               <div style="height: 2.5em" class="all-space bottom-separator">
+                 <%%=entity.customer_req_notification_p_sent  ? '<%= t.booking_management.form.notifications.sent%>' : '<%=t.booking_management.form.notifications.not_sent%>'%>
+               </div>
+               <div style="height: 2.5em" class="all-space bottom-separator">
+                 <%%=entity.customer_notification_sent  ? '<%= t.booking_management.form.notifications.sent%>' : '<%=t.booking_management.form.notifications.not_sent%>'%>
+               </div>
+               <div style="height: 2.5em" class="all-space">
+                 <%%=entity.customer_payment_enabled_sent  ? '<%= t.booking_management.form.notifications.sent%>' : '<%=t.booking_management.form.notifications.not_sent%>'%>
+               </div>                              
+             </div>
+             <div class="grid_3">
+               <div style="height: 2.5em" class="all-space bottom-separator">
+                  <%% if (entity.status != 'cancelled') { %>
+                  <button class="form-button green-button element-action-button" id="return_booking_button" style="width:95%"
+                      data-action-method="POST"
+                      data-action-url="/api/booking/send-customer-req-notification/<%%=entity.id%>"
+                      data-confirm-message="<%=t.booking_management.form.notifications.resend_confirmation%>">
+                      <%=t.booking_management.form.notifications.send_again%>
+                  </button>
+                  <%% } %>
+               </div>
+               <div style="height: 2.5em" class="all-space bottom-separator">
+                  <%% if (entity.status != 'cancelled' && entity.pay_now) { %>
+                  <button class="form-button green-button element-action-button" id="return_booking_button" style="width:95%"
+                      data-action-method="POST"
+                      data-action-url="/api/booking/send-customer-req-notification-pay/<%%=entity.id%>"
+                      data-confirm-message="<%=t.booking_management.form.notifications.resend_confirmation%>">
+                      <%=t.booking_management.form.notifications.send_again%>
+                  </button>
+                  <%% } %>
+               </div>
+               <div style="height: 2.5em" class="all-space bottom-separator">
+                  <%% if (entity.status != 'pending_confirmation' && entity.status != 'cancelled') { %>
+                  <button class="form-button green-button element-action-button" id="return_booking_button" style="width:95%"
+                      data-action-method="POST"
+                      data-action-url="/api/booking/send-customer-conf-notification/<%%=entity.id%>"
+                      data-confirm-message="<%=t.booking_management.form.notifications.resend_confirmation%>">
+                      <%=t.booking_management.form.notifications.send_again%>
+                  </button>
+                  <%% } %>
+               </div>
+               <div style="height: 2.5em" class="all-space">
+                  <%% if (entity.status != 'cancelled' && entity.force_allow_payment) { %>
+                  <button class="form-button green-button element-action-button" id="return_booking_button" style="width:95%"
+                      data-action-method="POST"
+                      data-action-url="/api/booking/send-customer-pay-enabled/<%%=entity.id%>"
+                      data-confirm-message="<%=t.booking_management.form.notifications.resend_confirmation%>">
+                      <%=t.booking_management.form.notifications.send_again%>
+                  </button>
+                  <%% } %>
+               </div>                                             
+             </div>
+          </div>
+       </div>
      </div>
 
      <div class="container_12">
@@ -861,6 +947,12 @@
                 <span class="entity-fieldvalue"><%%= entity.source %></span>
               </div>
             </div> 
+            <div class="element_template">
+              <div class="entity-field">
+                <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.created_by_manager %></span>
+                <span class="entity-fieldvalue"><%%= entity.created_by_manager ? '<%= t.booking_management.form.yes_created_by_manager %>' : '<%= t.booking_management.form.no_created_by_manager %>' %></span>
+              </div>
+            </div>             
             <div class="element_template">
               <div class="entity-field">
                 <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.user_agent_browser %></span>
