--- a/views/_incoming_money_summary.js.erb
+++ b/views/_incoming_money_summary.js.erb
@@ -16,15 +16,33 @@ require(['jquery','charts','ysdtemplate'], function($, Chart, tmpl) {
 			              }] 
                 },
 
-     loadData: function() {
+     maxValue: function() {
+        var max= 10;
+        for (var property in this.result) {
+          var total = new Number(this.result[property].total);
+          if (total > max) {
+            max = total;
+          }
+        }
+        return max * 1.5;
+     },
+
+     loadData: function(year) {
+
+       var url = '/api/booking/incoming-money';
+       if (year) {
+         url += '?year='+year;
+       }
 
   	   $.ajax({
   	   	       type: 'GET',
-  	   	       url : '/api/booking/incoming-money',
+  	   	       url : url,
   	   	       contentType: 'application/json; charset=utf-8',
-  		       dataType : 'json',
-  		       success: function(data, textStatus, jqXHR) {
+  		         dataType : 'json',
+  		         success: function(data, textStatus, jqXHR) {
                   bookingIncomingModel.result = data;
+                  bookingIncomingModel.graphData.labels = [];
+                  bookingIncomingModel.graphData.datasets[0].data = [];
                   for (item in data) {
                     bookingIncomingModel.graphData.labels.push(item);
                     bookingIncomingModel.graphData.datasets[0].data.push(new Number(data[item].total));
@@ -55,7 +73,11 @@ require(['jquery','charts','ysdtemplate'], function($, Chart, tmpl) {
 
         switch(status) {
         	case 'data_available':
-        	  this.chart = new Chart(this.ctx).Bar(bookingIncomingModel.graphData);
+            if (this.chart) {
+             $('#incoming_money_graphic').replaceWith('<canvas id="incoming_money_graphic" width="640" height="500"></canvas>');
+        	   this.ctx = document.getElementById("incoming_money_graphic").getContext("2d");
+            }
+            this.chart = new Chart(this.ctx).Bar(bookingIncomingModel.graphData, {scaleOverride: true, scaleStartValue: 0, scaleStepWidth: bookingIncomingModel.maxValue() / 20 , scaleSteps: 20, scaleIntegersOnly: true });
         	  $("#incoming_money_data").html(tmpl('booking_incoming_table', {data: bookingIncomingModel.result}));
         	  break;
         }
@@ -66,6 +88,6 @@ require(['jquery','charts','ysdtemplate'], function($, Chart, tmpl) {
   };
 
   bookingIncomingView.init();
-  bookingIncomingModel.loadData();
+  bookingIncomingModel.loadData(<%=current_year%>);
 
 });
