--- a/views/bookings_statistics.erb
+++ b/views/bookings_statistics.erb
@@ -2,6 +2,10 @@
 <h2 class="entity-title"><%=t.booking_summary.title%></h2>
 </div>
 <div class="admin_content_wrapper">
-<%= partial(:reservations_forecast) %>
-<%= partial(:incoming_money_summary) %>
+  <form>
+  	 <select id="year" name="year">
+  	 </select>
+  </form>
+  <%= partial(:reservations_forecast) %>
+  <%= partial(:incoming_money_summary) %>
 </div>
