--- a/views/bookings_statistics.js.erb
+++ b/views/bookings_statistics.js.erb
@@ -1,2 +1,49 @@
-<%= partial('reservations_forecast.js'.to_sym) %>
-<%= partial('incoming_money_summary.js'.to_sym) %>
+<%= partial('reservations_forecast.js'.to_sym, :locals => {current_year: current_year}) %>
+<%= partial('incoming_money_summary.js'.to_sym, :locals => {current_year: current_year}) %>
+
+require(['jquery','YSDMemoryDataSource','YSDSelectSelector'],
+   function($, MemoryDataSource, SelectSelector) {
+
+  bookingStatisticsModel = {
+  
+    loadData: function(year) {
+      bookingIncomingModel.loadData(year);
+      reservationsForecastModel.loadData(year);
+    }
+
+  };
+
+
+  bookingStatisticsController = {
+
+    yearChanged: function(year) {
+  	  bookingStatisticsModel.loadData(year);
+    }
+
+  };
+
+  bookingStatisticsView = {
+
+    init: function() {
+ 
+
+      // Configure weights
+      var years = [];
+      for (var idx=<%=first_year-1%>;idx<=<%=current_year%>;idx++) {
+        years.push(idx);
+      }
+      var yearsDataSource = new MemoryDataSource(years);
+      var yearValue = <%=current_year%>;
+      var selectWeight = new SelectSelector('year', yearsDataSource, yearValue);
+ 
+      $('#year').bind('change', function() {
+         bookingStatisticsController.yearChanged($(this).val());
+      });
+
+    }
+
+  };
+
+  bookingStatisticsView.init();
+
+});
