--- a/views/_pickedup_bookings.erb
+++ b/views/_pickedup_bookings.erb
@@ -1,16 +1,28 @@
-<h3><%= t.booking_pickup.title%></h3>
 <div class="container_12">
-  <div class="grid_2">
+  <div class="grid_6">
     <form>
       <div class="formrow">
-        <input type="text" name="pickup_date" id="pickup_date" class="fieldcontrol date_control" maxlength="10"/>
+        <div style="display: inline-block">
+        <input type="text" name="date_from" id="date_from" class="fieldcontrol date_control" maxlength="10"/>
+        </div>
+        <div style="display: inline-block">
+        <input type="text" name="date_to" id="date_to" class="fieldcontrol date_control" maxlength="10"/>
+        </div>
       </div>
     </form>
   </div>
 </div>
+<h3><%= t.booking_pickup.title%></h3>
 <div class="container_12">
   <div class="grid_12">
     <div id="pickedup_booking_data" class="guiblock centered_text">
+    </div>
+  </div>
+</div>
+<h3><%= t.booking_return.title%></h3>
+<div class="container_12">
+  <div class="grid_12">
+    <div id="returned_booking_data" class="guiblock centered_text">
     </div>
   </div>
 </div>
@@ -55,6 +67,53 @@
                <%%=data[i].booking_line_resources[idx].booking_item_reference%>&nbsp;
              <%% } %>
            </td>                     
+         </tr>
+         <%% } %>
+       </tbody>
+    </table>
+</div>
+<%% } %>
+</script>
+
+<script type="text/template" id="returned_bookings_table">
+ <%% if (data.length == 0) { %>
+         <p class="no-data-message"><%= t.entitymanagement.no_data %></p>
+ <%% } else { %> 
+ <div class="table-container">
+    <table id="elements_table" class="table">
+       <thead class="table-header">
+         <tr>
+           <th class="table-header-title left_text" scope="col" style="width:10%"><%=t.booking_list.id%></th>
+           <th class="table-header-title left_text" scope="col" style="width:15%"><%=t.booking_list.date_to%></th>
+           <% if product_family and product_family.pickup_return_place %>
+           <th class="table-header-title left_text" scope="col" style="width:15%"><%=t.booking_list.place%></th>
+           <% end %>
+           <th class="table-header-title left_text" scope="col" style="width:15%"><%=t.booking_list.customer%></th>
+           <th class="table-header-title left_text" scope="col" style="width:10%"><%=t.booking_list.customer_phone%></th>
+           <th class="table-header-title left_text" scope="col" style="width:10%"><%=t.booking_list.status%></th>
+           <th class="table-header-title left_text" scope="col" style="width:10%"/>
+           <th class="table-header-title left_text" scope="col" style="width:15%"><%=t.booking_list.item%></th>
+         </tr>
+       </thead>
+       <tbody id="elements_tbody" class="table-tbody">  
+         <%% 
+         var i=0;
+         for (i=0; i<data.length; i++) { %>          
+         <tr class="table-row"> 
+           <td class="table-cell"><a href="/admin/booking/bookings/<%%=data[i].id%>"><%%=data[i].id%></a></td>
+           <td class="table-cell left_text right-margin"><%%=data[i].date_to.toString('yyyy.MM.dd')%> <% if product_family and product_family.time_to_from%> <%%=data[i].time_to%> <%end%> </td>
+           <% if product_family and product_family.pickup_return_place %>
+           <td class="table-cell left_text right-margin"><%%=data[i].return_place%></td>
+           <% end %>
+           <td class="table-cell left_text right-margin"><%%=data[i].customer_name%> <%%=data[i].customer_surname%></td>
+           <td class="table-cell left_text right-margin"><%%=data[i].customer_phone%> <%%=data[i].customer_mobile_phone%></td> 
+           <td class="table-cell left_text right-margin"><%%=data[i].status%></td> 
+           <td class="table-cell left_text right-margin"></td>          
+           <td class="table-cell left_text">
+             <%% for (var idx=0;idx<data[i].booking_line_resources.length;idx++) { %>
+               <%%=data[i].booking_line_resources[idx].booking_item_reference%>&nbsp;
+             <%% } %>
+           </td>  
          </tr>
          <%% } %>
        </tbody>
