--- a/views/reserva-online.js.erb
+++ b/views/reserva-online.js.erb
@@ -86,6 +86,7 @@
          'process_error' ],
        process_state : 'item_selection',
        categoriesAvailable: [],
+       stock: {},
        categoriesPaymentEnabled: [],
        confirmBookingResponse : null, /* It holds the confirm booking response */
        pendingTimeToStartBooking: 0,       
@@ -417,6 +418,7 @@
                                        
                    success : function(data, textStatus, jqXHR) { /* RESPONSE OK */
                      bookingModel.categoriesAvailable = data.availability || [];
+                     bookingModel.stock = data.stock || {};
                      bookingModel.categoriesPaymentEnabled = data.payment || [];
                      bookingModel.calculate_price(date_from, time_from, date_to, time_to, pickup_place, return_place);
                      <% if booking_reservation_starts_with == :dates %>
@@ -1704,6 +1706,20 @@
 
        },
 
+       /* ------ Load stock ------------ */
+       load_stock: function() {
+
+          for (family in bookingModel.stock) {
+             $('select.quantity[rel="'+family+'"]').find('option').remove();
+             var limit = Math.min(10, bookingModel.stock[family].stock-bookingModel.stock[family].busy);
+             for (var idx=0;idx<=limit;idx++) {
+               $('select.quantity[rel="'+family+'"]').append(
+                 '<option value="'+ idx+'">' + idx+ '</option>');
+             }
+          }
+
+       },
+
        /* ------ Check payment --------- */
 
        check_payment: function() {
@@ -1743,6 +1759,7 @@
              break;
   
            case 'availability_checked':
+             this.load_stock();
              $('#checking-availability').dialog('close');
              break;
 
